--- a/src/index.html
+++ b/src/index.html
@@ -4,5 +4,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1  id="heading">Tasks</h1>
+    <div id="tasks"></div>
     <script src="script.js"></script>
 </body>
