--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="dialog" style="display: none;">
+  <form id="FORM">
+    <label for="TaskInput">Title:</label>
+    <input type="text" id="TaskInput" required><br>
+    <label for="TaskDescription">Description:</label>
+    <input type="textarea" id="TaskDescription" required><br>
+    <label for="TaskAsignee">Email:</label>
+    <input type="email" id="TaskAsignee" required><br>
+    <button type="submit">Submit</button>
+  </form>
+</div>
+<button onclick="openDialog()">Open Dialog</button>
+
     <h1  id="heading">Tasks</h1>
     <div id="tasks"></div>
     <script src="script.js"></script>
