made the "dialog" div a dialog

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="dialog" style="display: none;">
+    <dialog id="dialog" style="display: none;">
   <form id="FORM">
     <label for="TaskInput">Title:</label>
     <input type="text" id="TaskInput" required><br>
@@ -14,7 +14,7 @@
     <input type="email" id="TaskAsignee" required><br>
     <button type="submit">Submit</button>
   </form>
-</div>
+</dialog>
 <button onclick="openDialog()">Open Dialog</button>
 
     <h1  id="heading">Tasks</h1>
