--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <button type="submit">Submit</button>
   </form>
 </dialog>
-<button onclick="openDialog()">Open Dialog</button>
+<button onclick="openDialog()">Add Task</button>
 
     <h1  id="heading">Tasks</h1>
     <div id="tasks"></div>
