added selective viewing of uncompleted tasks

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
   </form>
 </dialog>
 <button onclick="openDialog()">Add Task</button>
+<button onclick="loadTasksButton()">Uncompleted</button>
+<button onclick="getAllTasksBack()">Show All</button>
 
     <h1  id="heading">Tasks</h1>
     <div id="tasks"></div>
