added css + improved add func

--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,11 @@
     <button type="submit">Submit</button>
   </form>
 </dialog>
+<div id="buttons">
 <button onclick="openDialog()">Add Task</button>
 <button onclick="loadTasksButton()">Uncompleted</button>
 <button onclick="getAllTasksBack()">Show All</button>
-
+</div>
     <h1  id="heading">Tasks</h1>
     <div id="tasks"></div>
     <script src="script.js"></script>
