--- a/src/index.html
+++ b/src/index.html
@@ -7,18 +7,19 @@
     <dialog id="dialog" style="display: none;">
   <form id="FORM">
     <label for="TaskInput">Title:</label>
-    <input type="text" id="TaskInput" required><br>
+    <input type="text" id="TaskInput" pattern="[a-z]+" required><br>
     <label for="TaskDescription">Description:</label>
     <input type="textarea" id="TaskDescription" required><br>
     <label for="TaskAsignee">Email:</label>
     <input type="email" id="TaskAsignee" required><br>
     <button type="submit">Submit</button>
+    <button onclick="closeDialog()">Close</button>
   </form>
 </dialog>
 <div id="buttons">
-<button onclick="openDialog()">Add Task</button>
-<button onclick="loadTasksButton()">Uncompleted</button>
-<button onclick="getAllTasksBack()">Show All</button>
+<button onclick="openDialog()" class="button_menu">Add Task</button>
+<button onclick="loadTasksButton()" class="button_menu">Uncompleted</button>
+<button onclick="getAllTasksBack()" class="button_menu">Show All</button>
 </div>
     <h1  id="heading">Tasks</h1>
     <div id="tasks"></div>
