changed form title allowed characters

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <dialog id="dialog" style="display: none;">
   <form id="FORM">
     <label for="TaskInput">Title:</label>
-    <input type="text" id="TaskInput" pattern="[a-z]+" required><br>
+    <input type="text" id="TaskInput" pattern="[A-Za-z0-9]+" required><br>
     <label for="TaskDescription">Description:</label>
     <input type="textarea" id="TaskDescription" required><br>
     <label for="TaskAsignee">Email:</label>
